CSS basics + files

--- a/src/DutchTreat/DutchTreat/wwwroot/index.html
+++ b/src/DutchTreat/DutchTreat/wwwroot/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Dutch Treat</title>
+    <link href="css/site.css" rel="stylesheet"/>
+
 </head>
 <body>
     <h2>Dutch Treat</h2>
@@ -21,7 +23,7 @@
     <form>
         <label>Username:</label>
         <br />
-        <input />
+        <input"/>
         <br />
         <label>Password:</label>
         <br />
