--- a/src/DutchTreat/DutchTreat/wwwroot/index.html
+++ b/src/DutchTreat/DutchTreat/wwwroot/index.html
@@ -20,29 +20,31 @@
         <button>Buy</button>
     </div>
 
-    <form>
-        <label>Username:</label>
-        <br />
-        <input"/>
-        <br />
-        <label>Password:</label>
-        <br />
-        <input type="password" />
-        <br />
-        <label>Email:</label>
-        <br />
-        <input type="email" />
-        <br />
-        <label>Subject:</label>
-        <br />
-        <input type="text" />
-        <br />
-        <label>Message:</label>
-        <br />
-        <textarea rows="4"></textarea>
-        <br />
-        <input type="submit" value="Send Message" />
-    </form>
+    <div id="form">
+        <form>
+            <label>Username:</label>
+            <br />
+            <input" />
+            <br />
+            <label>Password:</label>
+            <br />
+            <input type="password" />
+            <br />
+            <label>Email:</label>
+            <br />
+            <input type="email" />
+            <br />
+            <label>Subject:</label>
+            <br />
+            <input type="text" />
+            <br />
+            <label>Message:</label>
+            <br />
+            <textarea rows="4"></textarea>
+            <br />
+            <input type="submit" value="Send Message" />
+        </form>
+    </div>
 
 </body>
 </html>
