--- a/src/DutchTreat/DutchTreat/wwwroot/index.html
+++ b/src/DutchTreat/DutchTreat/wwwroot/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h2>Dutch Treat</h2>
-    <div>
+
+    <div class="product-info">
         <img src="img/VanGogh.jpg" />
         <h3>Mug</h3>
         <ul class = "product-props">
