--- a/src/DutchTreat/DutchTreat/wwwroot/index.html
+++ b/src/DutchTreat/DutchTreat/wwwroot/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <title>Dutch Treat</title>
     <link href="css/site.css" rel="stylesheet"/>
-
 </head>
 <body>
     <h2>Dutch Treat</h2>
@@ -18,7 +17,7 @@
             <li>Title: </li>
             <li>Description: Self:Portrait</li>
         </ul>
-        <button>Buy</button>
+        <button id="buyButton">Buy</button>
     </div>
 
     <div id="form">
@@ -47,5 +46,7 @@
         </form>
     </div>
 
+    <script src="js/index.js"></script>
 </body>
+
 </html>
