--- a/src/DutchTreat/DutchTreat/wwwroot/index.html
+++ b/src/DutchTreat/DutchTreat/wwwroot/index.html
@@ -46,6 +46,7 @@
         </form>
     </div>
 
+    <script src="lib/jquery/dist/jquery.js"></script>
     <script src="js/index.js"></script>
 </body>
 
