--- a/src/DutchTreat/DutchTreat/wwwroot/index.html
+++ b/src/DutchTreat/DutchTreat/wwwroot/index.html
@@ -46,6 +46,27 @@
         </form>
     </div>
 
+    <div>
+        <div id="loginToggle">Test</div>
+        <form class="popupForm">
+            <div>
+                <label>Username</label>
+                <input />
+            </div>
+            <div>
+                <label>Password</label>
+                <input type="password"/>
+            </div>
+            <div>
+                <input type="checkbox"/>
+                <label>Remember me?</label>
+            </div>
+            <div>
+                <input type="submit" value="Login"/>
+            </div>
+        </form>
+    </div>
+
     <script src="lib/jquery/dist/jquery.js"></script>
     <script src="js/index.js"></script>
 </body>
